--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$g.PnSbN2vRrJQ6zBY.KLiO2WLEQfLtgCAhtNI/2g477JLLw8wFjdO"
+# 	- password: java.lang.String = "$2a$05$Tg1/umiDiOQifPjwh.5Md.TjQN8MJDYq.Idl0GctljVap7t92Lq3m"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$4ajKzNRT4PVhyxhUqAiOle/bJuzPPA10T5WtJDPUw7w5C3G0reYZS"
+# 	- password: java.lang.String = "$2a$05$ipHGfVIaM9FbBF2H0UvIbuuIXy0WSUdFi.vC3hlQyEP0WmCw7502q"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$s4y.BuYA2TFGwfDFN9wdLuCu8IMLV0DLPW350AdEHLC3qAW1NF1Xa"
+# 	- password: java.lang.String = "$2a$05$/dy2Dlf5he8KczOpRhlCgedc/QM2YA6JR/hQrDwy0C0X3/aYi0lQa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$CQfHUfHRuW6qQmp9O93hPu6XVsNIFEp5hBtt0uDhh/5ja0yEHP49a"
+# 	- password: java.lang.String = "$2a$05$MwwIYDk376RZMh6xTVYFLODhZIhbH4Ex/T.Grq/jMBp81Uv76SsBW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$HXj94sN0BDM1EVy6pQQ/0eqkSr3grt4IwfYyK4oitxzQilvzzwa5i"
+# 	- password: java.lang.String = "$2a$05$5Ria4DwoWOp7RyBJhC0tVOE3ogtlb7anaIGyRY8nGQnVSybrzkWsK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$I3dD6gZ6BjtmACdO8wH8juphWkQp.Oi3z7NDBPu8M1RZvFi47xUTq"
+# 	- password: java.lang.String = "$2a$05$yTM45fhHAy/.nNFHrIOkt.XM5hhuMkjgR4/11.p0Q89MkdUo4eU7u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$y0J/6pm65XtCyzqhMC7iNO88o6HD002S4EvIitSdp09AL1rk1PZNW"
+# 	- password: java.lang.String = "$2a$05$jZJG6KfaJdSlTHKXMOjHteEczWtZro.Qw1ZVwiMTo1THx.tbwH0Oe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$su3fWX0PIyaEq421bXyUFefsYSFg442IJ732TSS2uGNQjkcsVTScS"
+# 	- password: java.lang.String = "$2a$05$ZkmJ3Yw56B6QS6VT7AxVr.ftI1Gf3/r3Bw.cjO4DT5wzHYR8esESm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$t/u28S15QzXJFEK7DCf94ueERmlrd1BHz8lmb6pqwfOUbYrnGhitC"
+# 	- password: java.lang.String = "$2a$05$iRo0aTowGdbQgi4Kr1fdCO2PUUBRGVQVrMvR6UyVLar9bCAyaRwxu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$T5Tp7v8xxPadhU89D5DjYuX3CN2wIzirYZocNQgBLOWoVso2zYRYS"
+# 	- password: java.lang.String = "$2a$05$DP512Gekm7buMwALE53ZA.6WSOsq12PvtrJL50JoGN7NI9aYGXtuC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$Pe7aIe1SpaLxPESNNEuNLeBiyfY5kBP6AnBY1NjlcuHwhhkXCtM3K"
+# 	- password: java.lang.String = "$2a$05$UfwIsIL/cFH6grdwoCa3WuxJCapD9ALAfujda6vTvZCcv9wwD0Ow6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1252,7 +1252,7 @@ Job01=79
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=94, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = acme.entities.ejuno.Ejuno{id=114, version=0}
+# 	- nust: acme.entities.nust.Nust = acme.entities.nust.Nust{id=114, version=0}
 
 Job02=80
 
@@ -1272,7 +1272,7 @@ Job02=80
 # 	- salary: acme.framework.datatypes.Money = <<EUR 500.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=95, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = null
+# 	- nust: acme.entities.nust.Nust = null
 
 Job03=81
 
@@ -1292,7 +1292,7 @@ Job03=81
 # 	- salary: acme.framework.datatypes.Money = <<EUR 400.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=96, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = null
+# 	- nust: acme.entities.nust.Nust = null
 
 Job04=82
 
@@ -1312,7 +1312,7 @@ Job04=82
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=97, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = null
+# 	- nust: acme.entities.nust.Nust = null
 
 Job05=83
 
@@ -1332,7 +1332,7 @@ Job05=83
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=98, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = null
+# 	- nust: acme.entities.nust.Nust = null
 
 Job06=84
 
@@ -1352,7 +1352,7 @@ Job06=84
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=99, version=0}
-# 	- ejuno: acme.entities.ejuno.Ejuno = null
+# 	- nust: acme.entities.nust.Nust = null
 
 Duty01=85
 
@@ -1661,7 +1661,7 @@ Application01=105
 # 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = acme.entities.ejdos.Ejdos{id=115, version=0}
+# 	- answer: acme.entities.answer.Answer = acme.entities.answer.Answer{id=115, version=0}
 
 Application02=106
 
@@ -1681,7 +1681,7 @@ Application02=106
 # 	- moment: java.util.Date = <<Tue Dec 10 09:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = null
+# 	- answer: acme.entities.answer.Answer = null
 
 Application03=107
 
@@ -1701,7 +1701,7 @@ Application03=107
 # 	- moment: java.util.Date = <<Thu Dec 05 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = acme.entities.ejdos.Ejdos{id=116, version=0}
+# 	- answer: acme.entities.answer.Answer = acme.entities.answer.Answer{id=116, version=0}
 
 Application04=108
 
@@ -1721,7 +1721,7 @@ Application04=108
 # 	- moment: java.util.Date = <<Mon Nov 25 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = null
+# 	- answer: acme.entities.answer.Answer = null
 
 Application05=109
 
@@ -1741,7 +1741,7 @@ Application05=109
 # 	- moment: java.util.Date = <<Mon Dec 02 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=81, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = null
+# 	- answer: acme.entities.answer.Answer = null
 
 Application06=110
 
@@ -1761,7 +1761,7 @@ Application06=110
 # 	- moment: java.util.Date = <<Sun Dec 08 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=82, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = null
+# 	- answer: acme.entities.answer.Answer = null
 
 Application07=111
 
@@ -1781,7 +1781,7 @@ Application07=111
 # 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=83, version=1}
-# 	- ejdos: acme.entities.ejdos.Ejdos = null
+# 	- answer: acme.entities.answer.Answer = null
 
 Justification01=112
 
@@ -1809,47 +1809,47 @@ Justification02=113
 # 	- reason: java.lang.String = "No me gusta esta peticion 2"
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=110, version=0}
 
-Ejuno01=114
+Nust01=114
 
-# acme.entities.ejuno.Ejuno{id=114, version=0}
+# acme.entities.nust.Nust{id=114, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 114
 # 	- version: int = 0
-# 	from acme.entities.ejuno.Ejuno:
+# 	from acme.entities.nust.Nust:
 # 	- serialVersionUID: long = 1
 # 	- pText: java.lang.String = "Hola"
-# 	- moreInfo2: java.lang.String = "hola otra ve"
+# 	- keylet: java.lang.String = "http:/algo.com"
 # 	- Job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
 # 	- password: acme.entities.password.Password = acme.entities.password.Password{id=117, version=0}
 
-Ejdos01=115
+Answer01=115
 
-# acme.entities.ejdos.Ejdos{id=115, version=0}
+# acme.entities.answer.Answer{id=115, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 115
 # 	- version: int = 0
-# 	from acme.entities.ejdos.Ejdos:
+# 	from acme.entities.answer.Answer:
 # 	- serialVersionUID: long = 1
 # 	@ respuesta: java.lang.String = "Hola"
-# 	@ protec: java.lang.String = "protec"
+# 	@ keylet: java.lang.String = "i7j9h8..."
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=105, version=0}
 
-Ejdos02=116
+Answer02=116
 
-# acme.entities.ejdos.Ejdos{id=116, version=0}
+# acme.entities.answer.Answer{id=116, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 116
 # 	- version: int = 0
-# 	from acme.entities.ejdos.Ejdos:
+# 	from acme.entities.answer.Answer:
 # 	- serialVersionUID: long = 1
 # 	@ respuesta: java.lang.String = "Hola"
-# 	@ protec: java.lang.String = "protec"
+# 	@ keylet: java.lang.String = "i7j9h8..."
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=107, version=0}
 
 Pass01=117
@@ -1863,5 +1863,5 @@ Pass01=117
 # 	from acme.entities.password.Password:
 # 	- serialVersionUID: long = 1
 # 	- pass: java.lang.String = "i7j9h8..."
-# 	- Ejuno: acme.entities.ejuno.Ejuno = acme.entities.ejuno.Ejuno{id=114, version=0}
+# 	- Nust: acme.entities.nust.Nust = acme.entities.nust.Nust{id=114, version=0}
 
